--- a/WorkHistory.html
+++ b/WorkHistory.html
@@ -17,7 +17,14 @@
 body {
   font: 100% Arial, Helvetica, sans-serif; }
 
-
+  @media screen and (max-width:600px)
+		{
+			.column{
+				
+				width: 100%;
+			}
+			
+		}
    </style>
     </head>
         <body>
