--- a/Education.html
+++ b/Education.html
@@ -21,10 +21,7 @@
 
 body {
   font: 100% Arial, Helvetica, sans-serif; }
-.tableheader{
-    font-size: 20px;
-    text-align: center;
-}
+
        </style>
     </head>
         <body>
@@ -137,7 +134,7 @@ body {
                         </tr>
                         <tr>
                             <td>
-                                <span class="Certificate"></span>
+                                <span class="Certificate">
                               Automation Specialist Level 1 for Tricentis Tosca 12.x
                                 </span>
                             </td><td>
@@ -150,7 +147,7 @@ body {
                           
                            <tr>
                             <td>
-                                <span class="Certificate"></span>
+                                <span class="Certificate">
                               Automation Specialist Level 2 for Tricentis Tosca 12.x
                                 </span>
                             </td><td>
@@ -162,7 +159,7 @@ body {
 
                            
                                <td>
-                                <span class="Certificate"></span>
+                                <span class="Certificate">
                               Automation Specialist Level 2 for Tricentis Tosca 12.x
                                 </span>
                             </td><td>
