--- a/Contact.html
+++ b/Contact.html
@@ -86,7 +86,7 @@
               <div class="row">  
                <div class="column">
                
-               <img src="contactMe.jpg" alt="<a href=http://www.freepik.com>Designed by Jannoon028 / Freepik</a>" style="width: 385px; height: 380px; object-fit: cover; align-items: center;" >
+               <img src="contact.jpg" alt="<a href=http://www.freepik.com>Designed by Jannoon028 / Freepik</a>" style="width: 385px; height: 380px; object-fit: cover; align-items: center;" >
                
                </div>
                <div class="column">
